--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,26 +3,16 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding: 6rem 0rem;
   min-height: 100vh;
 }
 
 .description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
+  display: grid;
+  place-items: center;
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
 }
 
 .description p {
@@ -34,16 +24,11 @@
   border-radius: var(--border-radius);
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
 .grid {
   display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
+  place-items: center;
+  text-align: center;
+  width: 100%;
 }
 
 .card {
@@ -80,32 +65,22 @@
   padding: 4rem 0;
 }
 
-.center::before {
-  background: var(--secondary-glow);
+
+.logo-box {
+  cursor: pointer;
+  position: relative;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+  overflow: hidden;
+  box-shadow: 0 0 0 8px rgba(var(--card-border-rgb), 0.3);
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
 
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
 
 .logo {
   position: relative;
+
 }
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
@@ -174,7 +149,7 @@
   .description p {
     align-items: center;
     inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
+    padding: 2rem 1rem;
     border-radius: 0;
     border: none;
     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
@@ -200,14 +175,17 @@
     );
     z-index: 1;
   }
-}
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
+  .logo-box {
+    width: 150px;
+    height: 150px;
+  }
+
+  .main {
+    padding: 0;
   }
 }
+
 
 @media (prefers-color-scheme: dark) {
   .vercelLogo {
